--- a/sqlalchemy/sqlalchemy.ipynb
+++ b/sqlalchemy/sqlalchemy.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dc64c8d2",
    "metadata": {},
    "outputs": [
@@ -229,6 +229,17 @@
       "2025-10-14 22:23:46,233 INFO sqlalchemy.engine.Engine DELETE FROM users WHERE users.id = ?\n",
       "2025-10-14 22:23:46,233 INFO sqlalchemy.engine.Engine [generated in 0.00072s] (1,)\n",
       "2025-10-14 22:23:46,235 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
